# weight-tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  python-package.yml
data/cargo_floor/: CARGO_BEAMS.xlsx  CARGO_FLOOR_PANEL.xlsx  C_SECTION_STRUCT.xlsx  INPUTS.xlsx  VALIDATION.xlsx
data/keel_beam/: BTM_PANEL.xlsx  GEOMETRY_PROCESSING.xlsx  INPUTS.xlsx  LOCAL_ATTACHMENTS.xlsx  RIBS.xlsx  SIDE_PANELS.xlsx  STRINGERS_&_EDGE_REINFORCEMENTS.xlsx  TOP_PANEL.xlsx  VALIDATION.xlsx
data/pax_door/: DOOR_FRAMES.xlsx  DOOR_INTERCOSTALS.xlsx  DOOR_LINTEL.xlsx  DOOR_SILL.xlsx  GEOMETRY_PROCESSING.xlsx  INPUTS.xlsx  VALIDATION.xlsx
data/pax_floor/: CROSS_BEAM.xlsx  FLOOR_PANEL.xlsx  GEOMETRY_PROCESSING.xlsx  INPUTS.xlsx  I_SECTION_STRUCT.xlsx  RAILS.xlsx  VALIDATION.xlsx
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: core.rst  data_loader.rst  geometry.rst  index.rst  main.rst  validation.rst  weight_functions.rst
docs/source/api/components/: base.rst  framework.rst  index.rst  registry.rst
docs/source/api/components/cargo_floor/: c_section_struct.rst  cargo_beams.rst  cargo_floor_panel.rst  index.rst
docs/source/api/components/generic/: areal_surface.rst  stored_mass.rst  volumetric_beam.rst
docs/source/api/components/keel_beam/: btm_panel.rst  index.rst  local_attachments.rst  ribs.rst  side_panels.rst  stringers.rst  top_panel.rst
docs/source/api/components/pax_door/: frames.rst  index.rst  intercostals.rst  lintel.rst  sill.rst
docs/source/api/components/pax_floor/: cross_beams.rst  i_section_struct.rst  index.rst  panels.rst  rails.rst
docs/source/api/loaders/: auxiliary.rst  cargo_floor.rst  common.rst  export.rst  index.rst  keel_beam.rst  package.rst  pax_door.rst  pax_floor.rst
docs/source/architecture/: adding_structures.rst  data_flow.rst  index.rst  overview.rst
docs/source/developer/: contributing.rst  data_inputs.rst  documentation.rst  index.rst  pre_commit.rst  testing.rst
docs/source/getting_started/: configuration.rst  index.rst  installation.rst  quickstart.rst
samples/structured_inputs/cargo_floor/CARGO_BEAMS/: metadata.json  primitives.csv
samples/structured_inputs/cargo_floor/CARGO_FLOOR_PANEL/: metadata.json  primitives.csv
samples/structured_inputs/cargo_floor/C_SECTION_STRUCT/: primitives.csv
samples/structured_inputs/cargo_floor/INPUTS/: datums.csv  frame_coords.csv
samples/structured_inputs/cargo_floor/VALIDATION/: targets.csv
samples/structured_inputs/keel_beam/BTM_PANEL/: primitives.csv
samples/structured_inputs/keel_beam/INPUTS/: datums.csv  frame_coords.csv
samples/structured_inputs/keel_beam/LOCAL_ATTACHMENTS/: metadata.json  primitives.csv
samples/structured_inputs/keel_beam/RIBS/: metadata.json  primitives.csv
samples/structured_inputs/keel_beam/SIDE_PANELS/: metadata.json  primitives.csv
samples/structured_inputs/keel_beam/STRINGERS_&_EDGE_REINFORCEMENTS/: primitives.csv
samples/structured_inputs/keel_beam/TOP_PANEL/: metadata.json  primitives.csv
samples/structured_inputs/keel_beam/VALIDATION/: targets.csv
samples/structured_inputs_json/cargo_floor/: CARGO_BEAMS.json  CARGO_FLOOR_PANEL.json  C_SECTION_STRUCT.json  INPUTS.json  VALIDATION.json
samples/structured_inputs_sqlite/cargo_floor/: CARGO_BEAMS.sqlite  CARGO_FLOOR_PANEL.sqlite  C_SECTION_STRUCT.sqlite  INPUTS.sqlite  VALIDATION.sqlite
src/: __init__.py  data_loader.py  geometry.py  main.py  validation.py  weight_functions.py
src/components/: base.py  registry.py
src/components/cargo_floor/: c_section_struct.py  cargo_beams.py  cargo_floor_panel.py
src/components/generic/: areal_surface.py  stored_mass.py  volumetric_beam.py
src/components/keel_beam/: btm_panel.py  local_attachments.py  ribs.py  side_panels.py  stringers.py  top_panel.py
src/components/pax_door/: frames.py  intercostals.py  lintel.py  sill.py
src/components/pax_floor/: cross_beams.py  i_section_struct.py  panels.py  rails.py
src/loaders/: __init__.py  auxiliary.py  cargo_floor.py  common.py  export.py  keel_beam.py  pax_door.py  pax_floor.py
tests/: conftest.py  test_areal_surface.py  test_base_component.py  test_components.py  test_cross_beam.py  test_data_loader.py  test_geometry.py  test_keel_beam.py  test_loader_plugins.py  test_main.py  test_pax_components.py  test_pax_door.py  test_registry.py  test_validation.py  test_weight_functions.py
weight_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
