[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weight-tool"
version = "1.0.0"
description = "Airbus Amber – Structure weight function calculator"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "black>=24.4",
    "flake8>=7.1",
    "isort>=5.13",
    "mypy>=1.10",
    "bandit>=1.7",
    "pre-commit>=3.7",
    "pydocstyle>=6.3",
    "pyupgrade>=3.16",
]
docs = [
    "sphinx>=8.1,<8.2",
    "pydata-sphinx-theme>=0.16",
    "sphinx-autodoc-typehints>=3.0,<3.1",
    "sphinx-design>=0.6",
    "sphinx-copybutton>=0.5",
    "sphinx-autobuild>=2024.10.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

# ── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | __pycache__
)/
'''

# ── isort ────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
known_third_party = ["numpy", "pandas", "matplotlib", "openpyxl"]

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["src"]

# ── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

# ── coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/main.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
